# final-fantasy_eventbot

./: .env.example  .gitignore  Dockerfile  code_explanation.md  deployment.md  docker-compose.yml  manual.md  pyproject.toml  reproduce_bomb.py  test_middleware.py  test_queue.py  test_webhook.py
src/final_fantasy_eventbot/: __init__.py  llm_middleware.py  main.py
